# swagger-spec.json
@@ -249,6 +249,42 @@
         ]
       }
     },
+    "/api/day/current": {
+      "get": {
+        "operationId": "DayController_findCurrent",
+        "parameters": [
+          {
+            "in": "header",
+            "required": false,
+            "name": "Locale",
+            "schema": {
+              "example": "en"
+            }
+          },
+          {
+            "in": "header",
+            "required": false,
+            "name": "isLocalized",
+            "schema": {
+              "example": false,
+              "type": "boolean",
+              "enum": [
+                true,
+                false
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "Day"
+        ]
+      }
+    },
     "/api/day/{id}": {
       "get": {
         "operationId": "DayController_findAll",
@@ -1179,7 +1215,7 @@
           "date": {
             "format": "date-time",
             "type": "string",
-            "example": "2025-07-28T18:12:22.941Z"
+            "example": "2025-07-29T17:25:55.858Z"
           },
           "title": {
             "type": "string"
@@ -1211,7 +1247,7 @@
           "date": {
             "format": "date-time",
             "type": "string",
-            "example": "2025-07-28T18:12:22.946Z"
+            "example": "2025-07-29T17:25:55.870Z"
           },
           "title": {
             "type": "string"
